fix: fix css (double scroll)

--- a/migration-to-typescript/src/components/view/sources/sources.css
+++ b/migration-to-typescript/src/components/view/sources/sources.css
@@ -2,12 +2,14 @@
     display: flex;
     flex-wrap: wrap;
     width: 100%;
-    max-height: 100%;
-    overflow: auto;
     align-items: center;
     justify-content: space-around;
     font: 300 1em 'Fira Sans', sans-serif;
-    transition: max-height 0.5s ease-in-out;
+    transition: font-size .25s,
+                margin .25s,
+                padding .25s,
+                opacity .5s .25s;
+
 }
 
 .source__item {
